<resources>
    <string name="app_name">Thuê Trọ</string>
    <string name="filter_results">Lọc kết quả</string>
    <string name="city">Tỉnh/Thành phố</string>
    <string name="hanoi">Hà Nội</string>
    <string name="district">Quận/Huyện</string>
    <string name="address_optional">Địa chỉ (Tùy chọn)</string>
    <string name="address_hint">Nhập địa chỉ cụ thể (nếu muốn)</string>
    <string name="room_type">Loại phòng</string>
    <string name="price">Giá</string>
    <string name="price_all">Tất cả</string>
    <string name="price_under_2m">&lt;=2 triệu</string>
    <string name="price_2m_to_3m">2-3 triệu</string>
    <string name="price_4m_to_6m">4-6 triệu</string>
    <string name="price_6m_to_8m">6-8 triệu</string>
    <string name="price_above_10m">&gt;=10 triệu</string>
    <string name="apply">Áp dụng</string>
</resources>